# mercari-robot

./: .gitignore  README.md  pyproject.toml
mercari_purchase_bot/: robot.py
mercari_robot/: __init__.py  robot.py
samples/: sample.py  sample_buy.py  sample_buy_this.py  sample_item_list.py  sample_like.py  sample_op.py
tests/: test_mercari_purchase_bot.py
