[tool.poetry]
name = "mercari-robot"
version = "0.1.0"
description = ""
authors = ["TomoyaFujita2016 <fujita.t.2016c@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
web-adapter = {git = "https://github.com/TomoyaFujita2016/web-adapter.git", rev = "main"}
lxml = "^4.6.3"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
